--- a/assets/css/assets/style.css
+++ b/assets/css/assets/style.css
@@ -14,6 +14,8 @@ body {
     justify-content: center;
 }
 
+
+
 .relogio {
     display: flex;
     align-items: center;
@@ -46,12 +48,8 @@ body {
 .relogio span.tempo{
     font-size: 10px;
 }
+  img{
+    display:flex;
+    align-items:-moz-popup;
 
-img{
-    height: auto;
-
-    align-items:initial;
-    justify-content: unsafe;
-    display: flex;
-
-}
+  }
