--- a/assets/css/assets/style.css
+++ b/assets/css/assets/style.css
@@ -7,14 +7,25 @@
 }
 
 body {
-   height:100vh;
-    background:linear-gradient(120deg, #fffefe, #000000);
+    width: 100%;
+    padding:30px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: linear-gradient( to left,rgb(0, 0, 0), rgb(156, 0, 0), rgb(0, 0, 0), rgb(117, 7, 7), rgb(139, 6, 6));
+    background-size: 500% 100%;
+    animation:degrade-animado 5s infinite alternate;
+    
 }
 
-
+@keyframes degrade-animado{
+    0%{
+        background-position-x:0%;
+    }
+    100%{
+        background-position-x:100% ;
+        }   
+    }
 
 .relogio {
     display: flex;
@@ -25,6 +36,7 @@ body {
     background: transparent;
     border-radius: 3px;
     box-shadow: 0px 8px 10px rgba(0,0,0,.5);
+    animation:degrade-animado 5s infinite alternate;
 }
 .relogio div{
     height: 170px;
@@ -38,6 +50,7 @@ body {
     box-shadow: 5px 5px 15px rgba(0,0,0, .7);
     border-radius: 7px;
     letter-spacing: 3px;
+    
 }
 
 .relogio span{
@@ -53,3 +66,4 @@ body {
     align-items:-moz-popup;
 
   }
+ 
